--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 83_remove_duplicates_from_sorted_list.js
 15_3sum.js
 11_container_with_most_water.js
+
+#string
+168_excel_sheet_column_title.js
+12_integer_to_roman.js
