--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .vscode
 
+4_median_of_two_sorted_arrays.js
+
 11_container_with_most_water.js
 12_integer_to_roman.js
 15_3sum.js
 
-35_search_insert_position.js
+35_search_insert_position.jse
 
 168_excel_sheet_column_title.js
 
