--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 4_median_of_two_sorted_arrays.js
 
 11_container_with_most_water.js
-12_integer_to_roman.js
 15_3sum.js
 
+30_substring_with_concatenation_of_all_words.js
 35_search_insert_position.jse
 
 168_excel_sheet_column_title.js
