--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 15_3sum.js
 
 30_substring_with_concatenation_of_all_words.js
-35_search_insert_position.jse
+35_search_insert_position.js
+39_combination_sum.js
 
 168_excel_sheet_column_title.js
 
