--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 35_search_insert_position.js
 39_combination_sum.js
 
+120_triangle.js
+
 168_excel_sheet_column_title.js
 
 224_basic_calculator.js
