--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 
 873_length_of_longest_fibonacci_subsequence.js
 
+1584_min_cost_to_connect_all_points.js
+
 2134_minimum_swaps_to_group_all_1s_togetherII.js
 
 
