--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 4_median_of_two_sorted_arrays.js
 
 11_container_with_most_water.js
-15_3sum.js
 
 30_substring_with_concatenation_of_all_words.js
 35_search_insert_position.js
 39_combination_sum.js
+
+79_word_search.js
 
 124_binary_tree_maximum_path_sum.js
 
