--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,11 @@
 35_search_insert_position.js
 39_combination_sum.js
 
-79_word_search.js
-
 124_binary_tree_maximum_path_sum.js
 
 168_excel_sheet_column_title.js
+
+212_word_search_II.js
 
 224_basic_calculator.js
 
