--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,11 @@
 
 274_h_index.js
 
+316_remove_duplicate_letters.js
+
 390_elimination_game.js
+
+456_132_pattern.js
 
 486_predict_the_winner.js
 
