--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@
 
 718_maximum_length_of_repeated_subarray.js
 
+726_number_of_atoms.js
+
 842_split_array_into_fibonacci_sequence.js
 
 873_length_of_longest_fibonacci_subsequence.js
