--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 35_search_insert_position.js
 39_combination_sum.js
 
+40_combination_sum _II.js
+
 124_binary_tree_maximum_path_sum.js
 
 168_excel_sheet_column_title.js
