--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 
 316_remove_duplicate_letters.js
 
+338_counting_bits.js
+
 390_elimination_game.js
 
 456_132_pattern.js
@@ -42,6 +44,8 @@
 842_split_array_into_fibonacci_sequence.js
 
 873_length_of_longest_fibonacci_subsequence.js
+
+983_minimum_cost_for_tickets.js
 
 994_rotting_oranges.js
 
