--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 63_unique_paths_II.js
 
+99_recover_binary_search_tree.js
+
 124_binary_tree_maximum_path_sum.js
 
 168_excel_sheet_column_title.js
