--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@
 648_replace_words.js
 650_2_keys_keyboard.js
 
+712_minimum_ASCII_delete_sum_for_two_strings.js
 718_maximum_length_of_repeated_subarray.js
 
 842_split_array_into_fibonacci_sequence.js
