--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 10_regular_expression_matching.js
 11_container_with_most_water.js
 
+25_reverse_nodes_in_k_group.js
+
 30_substring_with_concatenation_of_all_words.js
 35_search_insert_position.js
 39_combination_sum.js
