--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 39_combination_sum.js
 
 40_combination_sum _II.js
+41_first_missing_positive.js
+42_trapping_rain_water.js
+43_multiply_strings.js
 
 63_unique_paths_II.js
 
