--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@
 41_first_missing_positive.js
 42_trapping_rain_water.js
 43_multiply_strings.js
+44_wildcard_matching.js
+48_rotate_image.js
+
+51_n-queens.js
+52_n-queens_II.js
+54_spiral_matrix.js
 
 63_unique_paths_II.js
 
