--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@
 
 51_n-queens.js
 52_n-queens_II.js
-54_spiral_matrix.js
 
+60_permutation_sequence.js
 63_unique_paths_II.js
 
 95_unique_binary_search_trees_II.js
