--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,18 @@
 60_permutation_sequence.js
 63_unique_paths_II.js
 
+76_minimum_window_substring.js
+77_combinations.js
+78_subsets.js
+
+84_largest_rectangle_in_histogram.js
+85_maximal_rectangle.js
+86_partition_list.js
+87_scramble_string.js
+89_gray_code.js
+
+90_subsets_II.js
+91_decode_ways.js
 95_unique_binary_search_trees_II.js
 99_recover_binary_search_tree.js
 
