--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@
 
 105_construct_binary_tree_from_preorder_and_inorder_traversal.js
 
+116_populating_next_right_pointers_in_each_node.js
+
 124_binary_tree_maximum_path_sum.js
 
 168_excel_sheet_column_title.js
