--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,10 @@
 99_recover_binary_search_tree.js
 
 105_construct_binary_tree_from_preorder_and_inorder_traversal.js
+106_construct_binary_tree_from_inorder_and_postorder_traversal.js
+109_convert_sorted_list_to_binary_search_tree.js
 
+115_distinct_subsequences.js
 116_populating_next_right_pointers_in_each_node.js
 
 124_binary_tree_maximum_path_sum.js
