--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@
 648_replace_words.js
 650_2_keys_keyboard.js
 
+707_design_linked_list.js
+
 712_minimum_ASCII_delete_sum_for_two_strings.js
 718_maximum_length_of_repeated_subarray.js
 
