--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,6 @@
 89_gray_code.js
 
 91_decode_ways.js
-95_unique_binary_search_trees_II.js
 99_recover_binary_search_tree.js
 
 105_construct_binary_tree_from_preorder_and_inorder_traversal.js
@@ -51,6 +50,7 @@
 168_excel_sheet_column_title.js
 
 212_word_search_II.js
+214_shortest_palindrome.js
 
 224_basic_calculator.js
 
@@ -79,6 +79,8 @@
 650_2_keys_keyboard.js
 
 658_find_k_closest_elements.js
+
+686_repeated_string_match.js
 
 707_design_linked_list.js
 
