--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,8 @@
 
 779_k-th_symbol_in_grammar.js
 
+802_find_eventual_safe_states.js
+
 842_split_array_into_fibonacci_sequence.js
 
 873_length_of_longest_fibonacci_subsequence.js
