--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@
 
 842_split_array_into_fibonacci_sequence.js
 
+853_car_fleet.js
+856_score_of_parentheses.js
+
 873_length_of_longest_fibonacci_subsequence.js
 
 994_rotting_oranges.js
